--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -21,6 +21,8 @@ dependencies {
     implementation files("${stubparserJar}")
     implementation files("${afuJar}")
     implementation project(':checker-qual')
+    // As of 2019/12/16, the version of reflection-util in the Annotation File Utilities
+    // takes priority over this version, in the fat jar file. :-(  So update it too.
     implementation 'org.plumelib:reflection-util:0.2.0'
 
     testImplementation group: 'junit', name: 'junit', version: '4.12'
