--- a/checker/build.gradle
+++ b/checker/build.gradle
@@ -24,6 +24,10 @@ dependencies {
     implementation project(':dataflow')
     implementation project(':javacutil')
     implementation project(':checker-qual')
+    // As of 2019/12/16, the version of reflection-util in the Annotation
+    // File Utilities takes priority over this version, in the fat jar
+    // file. :-( So update it and re-build it locally when updating this.
+    implementation 'org.plumelib:reflection-util:0.2.0'
 
     testImplementation group: 'junit', name: 'junit', version: '4.12'
     testImplementation project(':framework-test')
