Warn when using JDK version 9, 10, or 12.

--- a/build.gradle
+++ b/build.gradle
@@ -54,10 +54,20 @@ ext {
     // This value is always overwritten, but Gradle needs the variable to be initialized.
     localRepo = ".git"
 }
-
-if (!JavaVersion.current().isJava8() && !JavaVersion.current().isJava11()) {
-    throw new RuntimeException("The Checker Framework should only be built with JDK 8 or JDK 11." +
-            " Found version " + JavaVersion.current().majorVersion);
+// Keep in sync with check in org.checkerframework.framework.source.SourceChecker.init.
+switch (JavaVersion.current()) {
+    case JavaVersion.VERSION_1_9:
+    case JavaVersion.VERSION_1_10:
+    case JavaVersion.VERSION_12:
+        logger.warn("The Checker Framework has only been tested with JDK 8 and 11." +
+                " Found version " + JavaVersion.current().majorVersion);
+        break;
+    case JavaVersion.VERSION_1_8:
+    case JavaVersion.VERSION_11:
+        break; // Supported versions
+    default:
+        logger.error("The Checker Framework should only be built with JDK 8 or JDK 11." +
+                " Found version " + JavaVersion.current().majorVersion);
 }
 
 task setLocalRepo(type:Exec) {
