skip test for conflicting annotations for JAIF-based WPI

--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -195,6 +195,10 @@ task wholeProgramInferenceTests(dependsOn: 'shadowJar', group: 'Verification') {
     doLast {
         commonWPIlogic()
 
+        // JAIF-based WPI fails this test, which was added for stub-based WPI.
+        // See issue here: https://github.com/typetools/checker-framework/issues/3009
+        delete('tests/whole-program-inference/annotated/ConflictingAnnotationsTest.java')
+
         // Inserting annotations from .jaif files in-place.
         List<File> jaifs = fileTree("${buildDir}/whole-program-inference/").matching {
             include '*.jaif'
