--- a/checker/bin-devel/Dockerfile-ubuntu-jdk11
+++ b/checker/bin-devel/Dockerfile-ubuntu-jdk11
@@ -20,6 +20,7 @@ RUN export DEBIAN_FRONTEND=noninteractive \
   make \
   maven \
   mercurial \
+  python3-requests \
   unzip \
   wget \
 && apt-get clean \
