--- a/checker/bin-devel/Dockerfile-ubuntu-jdk11-plus
+++ b/checker/bin-devel/Dockerfile-ubuntu-jdk11-plus
@@ -22,6 +22,7 @@ RUN export DEBIAN_FRONTEND=noninteractive \
   make \
   maven \
   mercurial \
+  python3-requests \
   unzip \
   wget \
 && apt-get clean \
