--- a/checker/bin-devel/Dockerfile-ubuntu-jdk8-plus
+++ b/checker/bin-devel/Dockerfile-ubuntu-jdk8-plus
@@ -46,7 +46,7 @@ RUN export DEBIAN_FRONTEND=noninteractive \
   latexmk \
   librsvg2-bin \
   maven \
-  python-pip \
+  python3-pip \
   rsync \
   texlive-font-utils \
   texlive-fonts-recommended \
