--- a/checker/bin-devel/Dockerfile-ubuntu-jdk11-plus-buildjdk
+++ b/checker/bin-devel/Dockerfile-ubuntu-jdk11-plus-buildjdk
@@ -55,7 +55,7 @@ RUN export DEBIAN_FRONTEND=noninteractive \
 && apt-get clean \
 && rm -rf /var/lib/apt/lists/*
 
-RUN pip install html5validator
+RUN pip3 install html5validator
 
 RUN export DEBIAN_FRONTEND=noninteractive \
 && apt-get -qqy update \
