--- a/checker/bin-devel/Dockerfile-ubuntu-jdk8-plus
+++ b/checker/bin-devel/Dockerfile-ubuntu-jdk8-plus
@@ -56,4 +56,4 @@ RUN export DEBIAN_FRONTEND=noninteractive \
 && apt-get clean \
 && rm -rf /var/lib/apt/lists/*
 
-RUN pip install html5validator
+RUN pip3 install html5validator
