--- a/checker/bin-devel/Dockerfile-ubuntu-jdk11-plus-buildjdk
+++ b/checker/bin-devel/Dockerfile-ubuntu-jdk11-plus-buildjdk
@@ -22,6 +22,7 @@ RUN export DEBIAN_FRONTEND=noninteractive \
   make \
   maven \
   mercurial \
+  python3-pip \
   python3-requests \
   unzip \
   wget \
