Reduce differences to typetools/master.

--- a/checker/build.gradle
+++ b/checker/build.gradle
@@ -251,8 +251,7 @@ shadowJar {
     // doFirst { println sourceSets.main.runtimeClasspath.asPath }
 }
 artifacts {
-    // Don't add these here or else the Javadoc/Sources jars are
-    // built during the assemble task.
+    // Don't add this here or else the Javadoc and the sources jar is built during the assemble task.
     // archives allJavadocJar
     // archives allSourcesJar
     archives shadowJar
