--- a/checker/bin-devel/Dockerfile-ubuntu-jdk8-plus
+++ b/checker/bin-devel/Dockerfile-ubuntu-jdk8-plus
@@ -4,14 +4,21 @@
 FROM ubuntu
 MAINTAINER Michael Ernst <mernst@cs.washington.edu>
 
+ENV DEBIAN_FRONTEND noninteractive
+
 ## Keep this file in sync with ../../docs/manual/troubleshooting.tex
 
 # According to
 # https://docs.docker.com/engine/userguide/eng-image/dockerfile_best-practices/:
 #  * Put "apt-get update" and "apt-get install" and apt cleanup in the same RUN command.
 #  * Do not run "apt-get upgrade"; instead get upstream to update.
-RUN export DEBIAN_FRONTEND=noninteractive \
-&& apt-get -qqy update \
+
+RUN apt-get -qqy update \
+&& apt-get -qqy install \
+  openjdk-8-jdk \
+&& update-java-alternatives --set java-1.8.0-openjdk-amd64
+
+RUN apt-get -qqy update \
 && apt-get -qqy install \
   ant \
   cpp \
@@ -25,20 +32,9 @@ RUN export DEBIAN_FRONTEND=noninteractive \
   python3-pip \
   python3-requests \
   unzip \
-  wget \
-&& apt-get clean \
-&& rm -rf /var/lib/apt/lists/*
+  wget
 
-RUN export DEBIAN_FRONTEND=noninteractive \
-&& apt-get -qqy update \
-&& apt-get -qqy install \
-  openjdk-8-jdk \
-&& update-java-alternatives --set java-1.8.0-openjdk-amd64 \
-&& apt-get clean \
-&& rm -rf /var/lib/apt/lists/*
-
-RUN export DEBIAN_FRONTEND=noninteractive \
-&& apt-get -qqy update \
+RUN apt-get -qqy update \
 && apt-get -qqy install \
   dia \
   hevea \
@@ -53,8 +49,9 @@ RUN export DEBIAN_FRONTEND=noninteractive \
   texlive-fonts-recommended \
   texlive-latex-base \
   texlive-latex-extra \
-  texlive-latex-recommended \
-&& apt-get clean \
-&& rm -rf /var/lib/apt/lists/*
+  texlive-latex-recommended
 
 RUN pip3 install html5validator
+
+RUN apt-get clean \
+&& rm -rf /var/lib/apt/lists/*
