--- a/checker/bin-devel/Dockerfile-ubuntu-jdk11
+++ b/checker/bin-devel/Dockerfile-ubuntu-jdk11
@@ -4,18 +4,18 @@
 FROM ubuntu
 MAINTAINER Michael Ernst <mernst@cs.washington.edu>
 
-ENV DEBIAN_FRONTEND noninteractive
-
 # According to
 # https://docs.docker.com/engine/userguide/eng-image/dockerfile_best-practices/:
 #  * Put "apt-get update" and "apt-get install" and apt cleanup in the same RUN command.
 #  * Do not run "apt-get upgrade"; instead get upstream to update.
 
-RUN apt-get -qqy update \
+RUN export DEBIAN_FRONTEND=noninteractive \
+&& apt-get -qqy update \
 && apt-get -qqy install \
   openjdk-11-jdk
 
-RUN apt-get -qqy update \
+RUN export DEBIAN_FRONTEND=noninteractive \
+&& apt-get -qqy update \
 && apt-get -qqy install \
   ant \
   cpp \
@@ -31,5 +31,6 @@ RUN apt-get -qqy update \
   unzip \
   wget
 
-RUN apt-get clean \
+RUN export DEBIAN_FRONTEND=noninteractive \
+&& apt-get clean \
 && rm -rf /var/lib/apt/lists/*
