--- a/checker/bin-devel/Dockerfile-ubuntu-jdk8
+++ b/checker/bin-devel/Dockerfile-ubuntu-jdk8
@@ -4,19 +4,19 @@
 FROM ubuntu
 MAINTAINER Michael Ernst <mernst@cs.washington.edu>
 
-ENV DEBIAN_FRONTEND noninteractive
-
 # According to
 # https://docs.docker.com/engine/userguide/eng-image/dockerfile_best-practices/:
 #  * Put "apt-get update" and "apt-get install" and apt cleanup in the same RUN command.
 #  * Do not run "apt-get upgrade"; instead get upstream to update.
 
-RUN apt-get -qqy update \
+RUN export DEBIAN_FRONTEND=noninteractive \
+&& apt-get -qqy update \
 && apt-get -qqy install \
   openjdk-8-jdk \
 && update-java-alternatives --set java-1.8.0-openjdk-amd64
 
-RUN apt-get -qqy update \
+RUN export DEBIAN_FRONTEND=noninteractive \
+&& apt-get -qqy update \
 && apt-get -qqy install \
   ant \
   cpp \
@@ -32,5 +32,6 @@ RUN apt-get -qqy update \
   unzip \
   wget
 
-RUN apt-get clean \
+RUN export DEBIAN_FRONTEND=noninteractive \
+&& apt-get clean \
 && rm -rf /var/lib/apt/lists/*
