--- a/checker/bin-devel/Dockerfile-ubuntu-jdk8-plus
+++ b/checker/bin-devel/Dockerfile-ubuntu-jdk8-plus
@@ -4,8 +4,6 @@
 FROM ubuntu
 MAINTAINER Michael Ernst <mernst@cs.washington.edu>
 
-ENV DEBIAN_FRONTEND noninteractive
-
 ## Keep this file in sync with ../../docs/manual/troubleshooting.tex
 
 # According to
@@ -13,12 +11,14 @@ ENV DEBIAN_FRONTEND noninteractive
 #  * Put "apt-get update" and "apt-get install" and apt cleanup in the same RUN command.
 #  * Do not run "apt-get upgrade"; instead get upstream to update.
 
-RUN apt-get -qqy update \
+RUN export DEBIAN_FRONTEND=noninteractive \
+&& apt-get -qqy update \
 && apt-get -qqy install \
   openjdk-8-jdk \
 && update-java-alternatives --set java-1.8.0-openjdk-amd64
 
-RUN apt-get -qqy update \
+RUN export DEBIAN_FRONTEND=noninteractive \
+&& apt-get -qqy update \
 && apt-get -qqy install \
   ant \
   cpp \
@@ -34,7 +34,8 @@ RUN apt-get -qqy update \
   unzip \
   wget
 
-RUN apt-get -qqy update \
+RUN export DEBIAN_FRONTEND=noninteractive \
+&& apt-get -qqy update \
 && apt-get -qqy install \
   dia \
   hevea \
@@ -53,5 +54,6 @@ RUN apt-get -qqy update \
 
 RUN pip3 install html5validator
 
-RUN apt-get clean \
+RUN export DEBIAN_FRONTEND=noninteractive \
+&& apt-get clean \
 && rm -rf /var/lib/apt/lists/*
