Ignore generated directory

--- a/.gitignore
+++ b/.gitignore
@@ -40,8 +40,9 @@ checker/jdk/jdk*.jar
 checker/jdk/**/*.class
 *.pyc
 checker/build-temp
-checker/bin-devel/.run-google-java-format
 checker/bin-devel/.plume-scripts
+checker/bin-devel/.run-google-java-format
+checker/bin-devel/dockerdir
 framework/src/main/resources/git.properties
 
 # manual files
