--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ plugins {
     id "net.ltgt.errorprone" version "1.1.1"
     // https://plugins.gradle.org/plugin/org.ajoberstar.grgit
     id 'org.ajoberstar.grgit' version '4.0.1' apply false
-    // https://github.com/n0mer/gradle-git-properties
+    // https://github.com/n0mer/gradle-git-properties ; target is: generateGitProperties
     id "com.gorylenko.gradle-git-properties" version "2.2.0"
 }
 apply plugin: "de.undercouch.download"
@@ -862,7 +862,8 @@ task checkBasicStyle(group: 'Format') {
             'logfile.log.rec.index',
             'manual.html',
             'manual.html-e',
-            'junit.*.properties']
+            'junit.*.properties',
+	    'framework/src/main/resources/git.properties']
     doLast {
         FileTree tree = fileTree(dir: projectDir)
         for (String dir : ignoreDirectories) {
