don't run the WPI tests redundantly and out-of-order as part of regular tests, since they're already run elsewhere

--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -11,6 +11,9 @@ sourceSets {
         java {
             // Tests that fail by design.
             exclude 'tests/SubtypingStringPatternsPartialTest.java'
+
+            // Tests that should only be invoked by particular build rules.
+            exclude 'wpirunners/**'
         }
     }
 }
