Add a script to rebuild and push docker images automatically (#111)
* Update opprop's docker images.

* Add a script to update docker images automatically.

--- a/checker/bin-devel/Dockerfile-ubuntu-for-cfi-jdk11
+++ b/checker/bin-devel/Dockerfile-ubuntu-for-cfi-jdk11
@@ -1,3 +1,5 @@
+# Rebuild it when typetools' corresponding docker image updates
+
 FROM mdernst/cf-ubuntu-jdk11
 
 LABEL MAINTAINER="w23xing@uwaterloo.ca"
