--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -93,6 +93,7 @@ jobs:
   pool:
     vmImage: 'ubuntu-16.04'
   container: mdernst/cf-ubuntu-jdk8:latest
+  timeoutInMinutes: 100
   steps:
   - checkout: self
     fetchDepth: 25
@@ -102,6 +103,7 @@ jobs:
   pool:
     vmImage: 'ubuntu-16.04'
   container: mdernst/cf-ubuntu-jdk11:latest
+  timeoutInMinutes: 100
   steps:
   - checkout: self
     fetchDepth: 25
