--- a/framework-test/build.gradle
+++ b/framework-test/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     // and maven-artifacts/release/frameworktestReleasePom.xml must be changed, too.
     implementation  group: 'junit', name: 'junit', version: '4.13'
     implementation project(':javacutil')
+    implementation 'org.plumelib:plume-util:1.0.11'
 
     if (Jvm.current().toolsJar) {
         tagletImplementation files(Jvm.current().toolsJar)
