do not run 3d array test for jaif wpi

--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -218,9 +218,10 @@ task wholeProgramInferenceJaifTests(dependsOn: 'shadowJar', group: 'Verification
     doLast {
         commonWPIlogic()
 
-        // JAIF-based WPI fails this test, which was added for stub-based WPI.
+        // JAIF-based WPI fails these tests, which was added for stub-based WPI.
         // See issue here: https://github.com/typetools/checker-framework/issues/3009
         delete('tests/whole-program-inference/annotated/ConflictingAnnotationsTest.java')
+        delete('tests/whole-program-inference/annotated/MultiDimensionalArrays.java')
 
         // Inserting annotations from .jaif files in-place.
         List<File> jaifs = fileTree("${buildDir}/whole-program-inference/").matching {
