elucidate the change

--- a/build.gradle
+++ b/build.gradle
@@ -120,7 +120,7 @@ allprojects {
         if (isJava8) {
             javacJar group: 'com.google.errorprone', name: 'javac', version: "$errorproneJavacVersion"
 
-            // provides backward-compatible packages for IDE to import
+            // provides backward-compatible com.sun.* packages for IDE to import
             compileOnly "com.google.errorprone:javac:9+181-r4173-1"
         }
 
