Don't check style in LaTeX output files

--- a/build.gradle
+++ b/build.gradle
@@ -863,6 +863,7 @@ task checkBasicStyle(group: 'Format') {
             '*.pdf',
             '*.png',
             '*.sty',
+            '*.toc',
             '*.xcf',
             '*~',
             '#*#',
