--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,9 @@ env:
     - THIS_REPO=checker-framework
     - OS=ubuntu
   matrix:
-    - GROUP=all-tests JDKVER=jdk8 BUILDJDK=downloadjdk
+    - GROUP=junit-tests JDKVER=jdk8 BUILDJDK=downloadjdk
     - GROUP=junit-tests JDKVER=jdk11 BUILDJDK=downloadjdk
+    - GROUP=nonjunit-tests JDKVER=jdk8 BUILDJDK=downloadjdk
     - GROUP=nonjunit-tests JDKVER=jdk11 BUILDJDK=downloadjdk
     - GROUP=jdk.jar JDKVER=jdk8 BUILDJDK=downloadjdk
     - GROUP=misc JDKVER=jdk8-plus BUILDJDK=downloadjdk
