--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,8 +6,8 @@ jobs:
   steps:
   - checkout: self
     fetchDepth: 25
-  - bash: ./checker/bin-devel/test-all-tests.sh
-    displayName: test-all-tests.sh
+  - bash: ./checker/bin-devel/test-cftests-all.sh
+    displayName: test-cftests-all.sh
 - job: all_tests_jdk11
   pool:
     vmImage: 'ubuntu-16.04'
@@ -15,8 +15,8 @@ jobs:
   steps:
   - checkout: self
     fetchDepth: 25
-  - bash: ./checker/bin-devel/test-all-tests.sh
-    displayName: test-all-tests.sh
+  - bash: ./checker/bin-devel/test-cftests-all.sh
+    displayName: test-cftests-all.sh
 - job: jdk_jar_jdk8
   pool:
     vmImage: 'ubuntu-16.04'
