--- a/build.gradle
+++ b/build.gradle
@@ -814,7 +814,8 @@ subprojects {
             }
         }
 
-        // Create an allTests task per project
+        // Create an allTests task per project.
+	// allTests = test + nonJunitTests
         tasks.create(name: 'allTests', group: 'Verification') {
             description 'Run all Checker Framework tests'
             // The 'test' target is just the JUnit tests.
