--- a/.travis.yml
+++ b/.travis.yml
@@ -18,15 +18,21 @@ env:
     - THIS_REPO=checker-framework
     - OS=ubuntu
   matrix:
-    - GROUP=all-tests JDKVER=jdk8 BUILDJDK=downloadjdk
-    - GROUP=junit-tests JDKVER=jdk11 BUILDJDK=downloadjdk
+    - GROUP=cftests-junit JDKVER=jdk8 BUILDJDK=downloadjdk
+    - GROUP=cftests-nonjunit JDKVER=jdk11 BUILDJDK=downloadjdk
+    - GROUP=nonjunit-tests JDKVER=jdk8 BUILDJDK=downloadjdk
     - GROUP=nonjunit-tests JDKVER=jdk11 BUILDJDK=downloadjdk
-    - GROUP=jdk.jar JDKVER=jdk8 BUILDJDK=downloadjdk
+    - GROUP=jdk-jar JDKVER=jdk8 BUILDJDK=downloadjdk
     - GROUP=misc JDKVER=jdk8-plus BUILDJDK=downloadjdk
     - GROUP=misc JDKVER=jdk11-plus BUILDJDK=downloadjdk
-    - GROUP=checker-framework-inference JDKVER=jdk8 BUILDJDK=downloadjdk
+    - GROUP=cf-inference JDKVER=jdk8 BUILDJDK=downloadjdk
+    - GROUP=cf-inference JDKVER=jdk11 BUILDJDK=downloadjdk
     - GROUP=plume-lib JDKVER=jdk8 BUILDJDK=downloadjdk
     - GROUP=plume-lib JDKVER=jdk11 BUILDJDK=downloadjdk
+    - GROUP=daikon JDKVER=jdk8 BUILDJDK=downloadjdk
+    - GROUP=daikon JDKVER=jdk11 BUILDJDK=downloadjdk
+    - GROUP=guava JDKVER=jdk8 BUILDJDK=downloadjdk
+    - GROUP=guava JDKVER=jdk11 BUILDJDK=downloadjdk
     - GROUP=downstream JDKVER=jdk8 BUILDJDK=downloadjdk
     - GROUP=downstream JDKVER=jdk11 BUILDJDK=downloadjdk
 
