--- a/.travis.yml
+++ b/.travis.yml
@@ -26,13 +26,15 @@ env:
     - GROUP=misc JDKVER=jdk8-plus BUILDJDK=downloadjdk
     - GROUP=misc JDKVER=jdk11-plus BUILDJDK=downloadjdk
     - GROUP=cf-inference JDKVER=jdk8 BUILDJDK=downloadjdk
+    # Not sure why this fails
     # - GROUP=cf-inference JDKVER=jdk11 BUILDJDK=downloadjdk
     - GROUP=plume-lib JDKVER=jdk8 BUILDJDK=downloadjdk
     - GROUP=plume-lib JDKVER=jdk11 BUILDJDK=downloadjdk
-    - GROUP=daikon JDKVER=jdk8 BUILDJDK=downloadjdk
-    - GROUP=daikon JDKVER=jdk11 BUILDJDK=downloadjdk
-    - GROUP=guava JDKVER=jdk8 BUILDJDK=downloadjdk
-    - GROUP=guava JDKVER=jdk11 BUILDJDK=downloadjdk
+    # The daikon and guava jobs time out on Travis: 10 minutes without output
+    # - GROUP=daikon JDKVER=jdk8 BUILDJDK=downloadjdk
+    # - GROUP=daikon JDKVER=jdk11 BUILDJDK=downloadjdk
+    # - GROUP=guava JDKVER=jdk8 BUILDJDK=downloadjdk
+    # - GROUP=guava JDKVER=jdk11 BUILDJDK=downloadjdk
     - GROUP=downstream JDKVER=jdk8 BUILDJDK=downloadjdk
     - GROUP=downstream JDKVER=jdk11 BUILDJDK=downloadjdk
 
