Rename and document scripts

--- a/build.gradle
+++ b/build.gradle
@@ -814,7 +814,8 @@ subprojects {
             }
         }
 
-        // Create an allTests task per project
+        // Create an allTests task per project.
+        // allTests = test + nonJunitTests
         tasks.create(name: 'allTests', group: 'Verification') {
             description 'Run all Checker Framework tests'
             // The 'test' target is just the JUnit tests.
@@ -872,7 +873,7 @@ task checkBasicStyle(group: 'Format') {
             'manual.html',
             'manual.html-e',
             'junit.*.properties',
-	    'framework/src/main/resources/git.properties']
+            'framework/src/main/resources/git.properties']
     doLast {
         FileTree tree = fileTree(dir: projectDir)
         for (String dir : ignoreDirectories) {
