--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,8 @@ env:
     - GROUP=plume-lib JDKVER=jdk8 BUILDJDK=downloadjdk
     - GROUP=plume-lib JDKVER=jdk11 BUILDJDK=downloadjdk
     - GROUP=daikon JDKVER=jdk8 BUILDJDK=downloadjdk
-    - GROUP=daikon JDKVER=jdk11 BUILDJDK=downloadjdk
+    # Takes more than 50 minutes on Travis.  TODO: break into parts.
+    # - GROUP=daikon JDKVER=jdk11 BUILDJDK=downloadjdk
     # - GROUP=guava JDKVER=jdk8 BUILDJDK=downloadjdk
     # - GROUP=guava JDKVER=jdk11 BUILDJDK=downloadjdk
     - GROUP=downstream JDKVER=jdk8 BUILDJDK=downloadjdk
