--- a/.travis.yml
+++ b/.travis.yml
@@ -34,8 +34,8 @@ env:
     - GROUP=daikon-part1 JDKVER=jdk11 BUILDJDK=downloadjdk
     - GROUP=daikon-part2 JDKVER=jdk8 BUILDJDK=downloadjdk
     - GROUP=daikon-part2 JDKVER=jdk11 BUILDJDK=downloadjdk
-    # - GROUP=guava JDKVER=jdk8 BUILDJDK=downloadjdk
-    # - GROUP=guava JDKVER=jdk11 BUILDJDK=downloadjdk
+    - GROUP=guava JDKVER=jdk8 BUILDJDK=downloadjdk
+    - GROUP=guava JDKVER=jdk11 BUILDJDK=downloadjdk
     - GROUP=downstream JDKVER=jdk8 BUILDJDK=downloadjdk
     - GROUP=downstream JDKVER=jdk11 BUILDJDK=downloadjdk
 
