--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,8 @@ repositories {
 }
 
 gitProperties {
-    gitPropertiesResourceDir = "${project.rootDir}/framework/src/main/resources"
+    // logically belongs in framework, but only checker resources are copied to .jar file
+    gitPropertiesResourceDir = "${project.rootDir}/checker/src/main/resources"
 }
 
 ext {
