--- a/docs/examples/lombok/build.gradle
+++ b/docs/examples/lombok/build.gradle
@@ -11,12 +11,13 @@ plugins {
 
 apply plugin: 'org.checkerframework'
 
+def cfHome = "${projectDir}/../../.."
 dependencies {
-    ext.checkerFrameworkVersion = '3.2.0'
-    compileOnly "org.checkerframework:checker-qual:${checkerFrameworkVersion}"
-    testCompileOnly "org.checkerframework:checker-qual:${checkerFrameworkVersion}"
-    checkerFramework "org.checkerframework:checker:${checkerFrameworkVersion}"
-    checkerFrameworkAnnotatedJDK "org.checkerframework:jdk8:${checkerFrameworkVersion}"
+    compileOnly files(cfHome + "/checker/dist/checker-qual.jar")
+    testCompileOnly files(cfHome + "/checker/dist/checker-qual.jar")
+    checkerFramework files(cfHome + "/checker/dist/checker.jar")
+    // only needed for JDK 8
+    checkerFrameworkAnnotatedJDK files(cfHome + "/checker/dist/jdk8.jar")
 }
 
 repositories {
