--- a/build.gradle
+++ b/build.gradle
@@ -427,8 +427,9 @@ task downloadJtreg(type: Download) {
     src 'https://ci.adoptopenjdk.net/view/Dependencies/job/jtreg/lastSuccessfulBuild/artifact/jtreg-4.2.0-tip.tar.gz'
     // If ci.adoptopenjdk.net is down, use this copy.
     // src 'https://checkerframework.org/jtreg-4.2.0-tip.tar.gz'
-    overwrite true
     dest new File(buildDir, 'jtreg-4.2.0-tip.tar.gz')
+    overwrite true
+    retries 3
     doLast {
         copy {
             from tarTree(dest)
